...
                            <IntroCarousel parentWidth={availableWidth} />
                        </View>

                        <Pressable
                            onPress={onClose}
                            style={styles.button}
                            testID="dismiss-onboarding"
                        >
                            <Text style={styles.buttonText}>{"Let's Wheel 🛞"}</Text>
                        </Pressable>
                    </ScrollView>
                </GlassCard>
            </View>
...
